# Curve-Modeller

./: CMakeLists.txt  Controls  README.md
include/: mat3f.hpp  mat4f.hpp  vec3f.hpp
shaders/: basic_fs.glsl  basic_vs.glsl  phong_fs.glsl
src/: image.cpp  main.cpp  mat3f.cpp  mat4f.cpp  obj_mesh.cpp  vec3f.cpp
